--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     buildFeatures {
         viewBinding true
@@ -34,7 +34,7 @@ android {
 dependencies {
 
 
-//    //androidx项目 XUI needed
+    //androidx项目 XUI needed
     implementation 'com.github.xuexiangjys:XUI:1.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -44,15 +44,14 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
-// https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2
+    // https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2
     implementation 'com.alibaba.fastjson2:fastjson2:2.0.26'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
 
 
-
-    //navigation activity
+    // navigation activity
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
@@ -61,7 +60,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
-    //xposed
+    // xposed
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
 
@@ -70,4 +69,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Room
+    def room_version = "2.2.6"
+    implementation "androidx.room:room-runtime:$room_version"
+    //noinspection KaptUsageInsteadOfKsp
+//    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
 }
