--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,7 @@ dependencies {
     // Room
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
-    //noinspection KaptUsageInsteadOfKsp
-//    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor  "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
 }
